--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "twig/twig": "^3.8",
         "erusev/parsedown": "^1.7",
         "erusev/parsedown-extra": "^0.8.1",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "type": "library"
 }
