--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "erusev/parsedown": "^1.7",
         "erusev/parsedown-extra": "^0.8.1",
         "ext-curl": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "voku/simple_html_dom": "^4.8",
+        "voku/portable-utf8": "^6.0"
     },
     "type": "library"
 }
