--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "voku/simple_html_dom": "^4.8",
-        "voku/portable-utf8": "^6.0"
+        "voku/portable-utf8": "^6.0",
+      "ext-pdo": "*"
     },
     "type": "library"
 }
