--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "ext-json": "*",
         "voku/simple_html_dom": "^4.8",
         "voku/portable-utf8": "^6.0",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-zend-opcache": "*"
     },
     "type": "library"
 }
